--- a/comparison.html
+++ b/comparison.html
@@ -47,7 +47,7 @@
                 <div class="thumbnail">
                     <img src="visualizations/Latitude_v_MaxTemp.png" alt="..." class="img-thumbnail">
                   </div>
-                <div class="caption">
+                <div class="caption text-info">
                     <h5>vs Max Temperature</h5>
                 </div>
               </div>
