--- a/visualizations/windspeed.html
+++ b/visualizations/windspeed.html
@@ -39,7 +39,7 @@
   </nav>
 
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Home</a></li>
-    <li class="breadcrumb-item"><a href="#">Plots</a></li>
+    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+    <li class="breadcrumb-item"><a href="../comparison.html">Comparison</a></li>
     <li class="breadcrumb-item active">Cloudiness</li>
   </ol>
