--- a/visualizations/cloudiness.html
+++ b/visualizations/cloudiness.html
@@ -6,15 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Latitude - Home</title>
+    <title>Latitude vs Cloudiness</title>
 
     <!-- CSS - Used Litera Bootswatch which overrides bootstrap and requires js and jQuery -->
-    <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
-
-    <!-- Litera Bootswatch -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous"> -->
-
     <!-- Flatly Bootswatch -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/flatly/bootstrap.min.css" integrity="sha384-qF/QmIAj5ZaYFAeQcrQ6bfVMAh4zZlrGwTPY7T/M+iTTLJqJBJjwwnsE5Y0mV7QK" crossorigin="anonymous">
 
@@ -61,7 +55,7 @@
               <div class="card-header">
                 <h3 class="display-5">Latitude vs Cloudiness (%)</h3>
               </div>            
-              <img src="Latitude_v_Cloudiness.png" alt="..." class="card-img-top">
+              <img src="../assets/Latitude_v_Cloudiness.png" alt="..." class="card-img-top">
               <div class="card-body">
                 <p class="card-text lead">The scatter plot above shows the relationship between cloudiness and the city latitude. The points are scattered everywhere here - even moreso than the humidity plot. This might suggest that these two variables are unrelated.</p>
               </div>
@@ -82,7 +76,7 @@
                     </div>
                       <div class="thumbnail d-flex justify-content-center">
                         <a href="maxtemp.html">
-                          <img src="Latitude_v_MaxTemp.png" alt="..." class="img-thumbnail">
+                          <img src="../assets/Latitude_v_MaxTemp.png" alt="..." class="img-thumbnail">
                         </a>
                         </div>
                     </div>
@@ -92,7 +86,7 @@
                     </div> 
                       <div class="thumbnail d-flex justify-content-center">
                         <a href="humidity.html">
-                          <img src="Latitude_v_Humidity.png" alt="..." class="img-thumbnail">
+                          <img src="../assets/Latitude_v_Humidity.png" alt="..." class="img-thumbnail">
                         </a>
                         </div>              
                   </div>
@@ -104,7 +98,7 @@
                   </div>   
                       <div class="thumbnail d-flex justify-content-center">
                         <a href="cloudiness.html">
-                          <img src="Latitude_v_Cloudiness.png" alt="..." class="img-thumbnail">
+                          <img src="../assets/Latitude_v_Cloudiness.png" alt="..." class="img-thumbnail">
                         </a>
                         </div>                    
                   </div>
@@ -114,7 +108,7 @@
                   </div> 
                       <div class="thumbnail d-flex justify-content-center">
                         <a href="windspeed.html">
-                          <img src="Latitude_v_WindSpeed.png" alt="..." class="img-thumbnail">
+                          <img src="../assets/Latitude_v_WindSpeed.png" alt="..." class="img-thumbnail">
                         </a>
                         </div>                   
                   </div>
