--- a/comparison.html
+++ b/comparison.html
@@ -6,15 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Latitude - Home</title>
+    <title>Latitude vs X</title>
 
     <!-- CSS - Used Litera Bootswatch which overrides bootstrap and requires js and jQuery -->
-    <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
-
-    <!-- Litera Bootswatch -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous"> -->
-
     <!-- Flatly Bootswatch -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/flatly/bootstrap.min.css" integrity="sha384-qF/QmIAj5ZaYFAeQcrQ6bfVMAh4zZlrGwTPY7T/M+iTTLJqJBJjwwnsE5Y0mV7QK" crossorigin="anonymous">
 
@@ -70,7 +64,7 @@
                             </div> <!--caption-->
                             <div class="thumbnail d-flex justify-content-center">
                               <a href="visualizations/maxtemp.html">
-                                <img src="visualizations/Latitude_v_MaxTemp.png" alt="..." class="img-thumbnail">
+                                <img src="assets/Latitude_v_MaxTemp.png" alt="..." class="img-thumbnail">
                               </a>
                             </div> <!--thumbnail-->
                           </div> <!--card body-->
@@ -84,7 +78,7 @@
                         </div> <!--caption-->
                         <div class="thumbnail d-flex justify-content-center">
                           <a href="visualizations/humidity.html">
-                            <img src="visualizations/Latitude_v_Humidity.png" alt="..." class="img-thumbnail">
+                            <img src="assets/Latitude_v_Humidity.png" alt="..." class="img-thumbnail">
                           </a>
                         </div> <!--thumbnail-->
                       </div> <!--card body-->
@@ -100,7 +94,7 @@
                       </div> <!--caption-->
                       <div class="thumbnail d-flex justify-content-center">
                         <a href="visualizations/cloudiness.html">
-                          <img src="visualizations/Latitude_v_Cloudiness.png" alt="..." class="img-thumbnail">
+                          <img src="assets/Latitude_v_Cloudiness.png" alt="..." class="img-thumbnail">
                         </a>
                       </div> <!--thumbnail-->
                     </div> <!--card body-->
@@ -114,7 +108,7 @@
                       </div> <!--caption-->
                       <div class="thumbnail d-flex justify-content-center">
                         <a href="visualizations/windspeed.html">
-                          <img src="visualizations/Latitude_v_WindSpeed.png" alt="..." class="img-thumbnail">
+                          <img src="assets/Latitude_v_WindSpeed.png" alt="..." class="img-thumbnail">
                         </a>
                       </div> <!--thumbnail-->
                     </div> <!--card body-->
